# Omicron

./: .csslintrc  .gitignore  README.md  docker-compose.yml  dump-Omicron-202502081634.sql
src/backend/: Cargo.toml  Dockerfile
src/backend/src/: api_docs.rs  config.rs  error.rs  main.rs
src/backend/src/auth/: auth_middleware.rs  check_credentials.rs  check_if_account_exists.rs  create_account.rs  create_token.rs  mod.rs
src/backend/src/crypto/: compare.rs  hash.rs  mod.rs  rand_string.rs
src/backend/src/db/: init_db.rs  init_tables.rs  queries.rs
src/backend/src/libs/: mod.rs
src/backend/src/libs/auth/: auth_middleware.rs  check_credentials.rs  check_if_account_exists.rs  create_account.rs  create_token.rs  insure_file_exists.rs  insure_post_exists.rs  insure_string_size.rs  insure_subicron_exists.rs  mod.rs  parse_i64.rs
src/backend/src/libs/comments/: create_comment_on_post.rs  get_comments_on_post.rs  mod.rs
src/backend/src/routes/: health.rs  mod.rs
src/backend/src/structs/: accounts.rs  files.rs  mod.rs
src/frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html  nginx.conf  tailwind.config.js
src/frontend/src/: config.rs  main.rs  router.rs
src/frontend/src/components/: comment.rs  mainbody.rs  mod.rs  post.rs  post_preview.rs  protected.rs  side_bar.rs  sidebar.rs  subicron.rs  welcome.rs
src/frontend/src/libs/: mod.rs
src/frontend/src/routes/: home.rs  login.rs  mod.rs  signup.rs
src/frontend/src/ui/: button.rs  enter_post_button.rs  image.rs  input.rs  mod.rs  modal.rs  post_button.rs  spinner.rs  upvote_button.rs
(+64 files in other folders)
