[package]
name = "omicron-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
argon2 = "0.5.3"
env_logger = "0.11.6"
once_cell = "1.20.2"
rand = "0.8.5"
serde = "1.0.217"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "mysql" ] }
tokio = { version = "1.43.0", features = ["full"] }
utoipa = "5.2.0"
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
