[package]
name = "omicron-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["console"] }

reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
gloo-storage = "0.3.0"
gloo-timers = "0.3.0"
urlencoding = "2.1.3"

yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
